# oss-risk-radar

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  compose.yaml  package-lock.json  package.json
.github/: dependabot.yml
docs/: roadmap.md
mltraining/scoring/: .env.example  constraints-py314.txt  pyproject.toml  requirements.txt
mltraining/scoring/app/: __init__.py  config.py  main.py
mltraining/scoring/app/api/: routes.py
mltraining/scoring/app/modeling/: __init__.py  artifacts.py  baseline.py  features.py  neural_net.py  registry.py  xgboost_model.py
mltraining/scoring/app/schemas/: __init__.py  score.py
mltraining/scoring/app/scoring/: __init__.py  explanations.py  heuristic.py  model.py
mltraining/scoring/app/training/: __init__.py  artifact_export.py  artifacts_cli.py  calibration.py  dataset_quality.py  datasets.py  evaluation.py  pipeline.py
mltraining/scoring/app/training/maintenance_dataset/: __init__.py  adapters.py  cli.py  entities.py  events.py  features.py  labels.py  pipeline.py  sampling.py  storage.py
mltraining/scoring/oss_risk_radar_scoring.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mltraining/scoring/tests/: conftest.py  test_artifacts_cli.py  test_config.py  test_dataset_quality.py  test_datasets.py  test_features.py  test_health.py  test_heuristic.py  test_maintenance_dataset_events.py  test_maintenance_dataset_features.py  test_maintenance_dataset_labels.py  test_maintenance_dataset_pipeline.py  test_model_scoring.py  test_slice_metrics.py  test_training.py
(+243 files in other folders)
